<resources>
    <string name="app_name">BaseProjectKotlin_H_C</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="next_screen">Next Screen</string>
    <string name="no_result_please_try_again">No Result, Please try again.</string>
    <string name="empty_list">Empty list!</string>
    <string name="retry">Retry</string>
    <string name="api_sample">Api Sample</string>
    <string name="pick_photo_sample">Pick Photo Sample</string>
    <string name="title_photos">Photos</string>

    <string name="grant_permission">Please grant the application permission to continue using the app</string>
    <string name="goto_settings">You must approve this permission in Permissions in the app settings on your device to continue using the app.</string>
    <string name="settings">Settings</string>
    <string name="api_paging_example">Api Paging Example</string>
    <string name="loading">Loading</string>
    <string name="show_list_popup_menu">Show List Popup Menu</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="shapeable_image_view">Shapeable Image View</string>
    <string name="click_me">Click Me</string>
    <string name="test_reified_keyword">Test Reified Keyword</string>
</resources>